java 17 [POL-217] (#116)