@@ -8,6 +8,8 @@ plugins {
 	id 'com.google.cloud.tools.jib' version '3.1.4' apply false
 	// ^^ see https://github.com/GoogleContainerTools/jib/blob/master/docs/faq.md#i-am-seeing-method-not-found-or-class-not-found-errors-when-building
   	id 'org.sonarqube' version '3.3' apply false
+	id 'io.freefair.lombok' version '6.4.1' apply false
+	id 'org.hidetake.swagger.generator' version '2.19.2' apply false
 }
 
 repositories { mavenCentral() }
@@ -24,7 +26,6 @@ subprojects {
 
 	apply plugin: 'idea'
 	apply plugin: 'java'
-	compileJava { options.release = 11 }
 
 	ext {
 		artifactGroup = "${group}.${rootProject.name}"
@@ -42,6 +43,11 @@ subprojects {
 			dependency 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.33'
 		}
 	}
+
+	tasks.withType(org.hidetake.gradle.swagger.generator.GenerateSwaggerCode).all {
+		jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED'] // for jvm 16+
+	}
+
 }
 
-idea.project.jdkName = '11'
+idea.project.jdkName = '17'
